super client review section added

--- a/index.html
+++ b/index.html
@@ -123,20 +123,68 @@
                 <!-- great tea text section -->
                 <div>
                     <h1 class="font-bold text-5xl">Great Tea, Freshly Presented</h1>
-                    <p class="text-gray-500 my-5">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions .
+                    <p class="text-gray-500 my-5">The meaning of gong cha is chanese is to provide the best tea to
+                        emperor from all possessions .
                         It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been
                         deeply appreciated by its custoers because of good words of mouth and unique customized service
                         orginated from Taiwan.</p>
                     <h3 class="font-bold text-2xl">
                         Unique Taste
                     </h3>
-                    <p class="text-gray-500 my-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <p class="text-gray-500 my-5">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
                     <h3 class="font-bold text-2xl">Premium Quality</h3>
-                    <p class="text-gray-500 my-5">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                    <p class="text-gray-500 my-5">Premium Quality that makes tea more elegant and more durable when you
+                        use it.</p>
                 </div>
             </div>
         </section>
         <!-- super client section -->
+        <section class="mb-12 ">
+            <!-- super section content container -->
+            <div class="grid grid-cols-1 lg:grid-cols-2 bg-gradient-to-r from-orange-400 to-red-500 rounded-lg ">
+                <!-- super client text -->
+                <div class="flex justify-center items-center ">
+                    <div class="text-white w-5/6 px-4 my-11">
+                        <h1 class="text-5xl font-bold mb-7">Meet Our Super Clients</h1>
+                        <p class="mb-6 max-w-96">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                            alteration in some form, by injected humour, or randomised words which don't look even slightly
+                            believable. </p>
+                            <button class="bg-white text-orange-500 font-bold p-2 rounded-md ">Show All </button>
+                    </div>
+                </div>
+                <!-- super client review -->
+                <div class="lg:py-20 relative md:p-16 p-14 ">
+                    <!-- review card -1-->
+                    <div class="absolute z-10 h-56 bg-white rounded-lg w-5/6 md:w-4/6 lg:w-5/6 p-10 top-40 md:p-10 left-5 lg:-left-24 lg:top-56 md:top-56">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <p class="text-gray-500 mb-8">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3 class="font-bold text-2xl">Ilham Yuda</h3>
+                        <p class="text-gray-500">Businessman</p>
+                    </div>
+                    <!-- review card-2 -->
+                    <div class="relative h-56 bg-white rounded-lg w-full md:w-5/6 p-10 opacity-40 mb-24">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <p class="text-gray-500 mb-8">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3 class="font-bold text-2xl">Ilham Yuda</h3>
+                        <p class="text-gray-500">Businessman</p>
+                    </div>
+                        <!-- review card -3 -->
+                    <div class="relative h-56 bg-white rounded-lg w-full md:w-5/6 p-10 opacity-40">
+                        <div class="absolute -top-5 -left-5 bg-white rounded-full">
+                            <img class="p-1" src="images/client.png" alt="">
+                        </div>
+                        <p class="text-gray-500 mb-8">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3 class="font-bold text-2xl">Ilham Yuda</h3>
+                        <p class="text-gray-500">Businessman</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
