--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                     <div class="h-32 bg-gradient-to-r from-red-400 to-red-100 rounded-lg">
                     </div>
                     <div class="bg-gradient-to-r from-amber-400 to-amber-100 rounded-lg row-span-2">
-                        <img class="mx-auto my-7" src="/images/fresh-1.png" alt="">
+                        <img class="mx-auto my-7" src="./images/fresh-1.png" alt="">
                     </div>
                     <div class="bg-gradient-to-r from-slate-400 to-slate-100 rounded-lg row-span-2">
-                        <img class="mx-auto my-7" src="/images/fresh-2.png" alt="">
+                        <img class="mx-auto my-7" src="./images/fresh-2.png" alt="">
                     </div>
                     <div class="h-32 bg-gradient-to-r from-slate-400 to-slate-100 rounded-lg">
                     </div>
