--- a/index.html
+++ b/index.html
@@ -19,15 +19,19 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                    },
+                    fontFamily:{
+                        'manrope' : ['Manrope', 'sans-serif']
                     }
                 }
+                
             }
         }
     </script>
 
 </head>
 
-<body>
+<body class="font-manrope">
     <main class="max-w-screen-xl mx-auto pt-12">
         <!-- banner section -->
         <div class="lg:flex md:flex pl-4 md:pl-0 mb-12">
@@ -112,10 +116,10 @@
                     <div class="h-32 bg-gradient-to-r from-red-400 to-red-100 rounded-lg">
                     </div>
                     <div class="bg-gradient-to-r from-amber-400 to-amber-100 rounded-lg row-span-2">
-                        <img class="mx-auto my-7" src="./images/fresh-1.png" alt="">
+                        <img class="mx-auto my-7" src="images/fresh-1.png" alt="">
                     </div>
                     <div class="bg-gradient-to-r from-slate-400 to-slate-100 rounded-lg row-span-2">
-                        <img class="mx-auto my-7" src="./images/fresh-2.png" alt="">
+                        <img class="mx-auto my-7" src="images/fresh-2.png" alt="">
                     </div>
                     <div class="h-32 bg-gradient-to-r from-slate-400 to-slate-100 rounded-lg">
                     </div>
