--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <div class="grid grid-cols-2 gap-5">
                     <div class="h-32 bg-gradient-to-r from-red-400 to-red-100 rounded-lg">
                     </div>
-                    <div class="bg-gradient-to-r from-amber-400 to-amber-100 rounded-lg row-span-2">
+                    <div class="bg-gradient-to-r from-red-400 to-red-100 rounded-lg row-span-2">
                         <img class="mx-auto my-7" src="images/fresh-1.png" alt="">
                     </div>
                     <div class="bg-gradient-to-r from-slate-400 to-slate-100 rounded-lg row-span-2">
